<resources>
    <string name="app_name">BestPictures</string>

    <!--Settings-->
    <string name="menu_general_settings">Settings</string>
    <string name="menu_general_reset_vote_count">Reset Vote Count</string>
    <string name="menu_general_refresh">Refresh</string>

    <!--Sort by-->
    <string name="pref_sort_by_title">Sort</string>
    <string name="pref_sort_by_key" translatable="false">sort_by</string>
    <string name="pref_sort_by_popularity_desc_label">By Popularity</string>
    <string name="pref_sort_by_rating_desc_label">By Rating</string>
    <string name="pref_sort_by_favorite_label">Favorites</string>
    <string name="pref_sort_by_popularity_desc" translatable="false">popular</string>
    <string name="pref_sort_by_rating_desc" translatable="false">top_rated</string>
    <string name="pref_sort_by_favorite" translatable="false">favorite</string>
    <string name="pref_vote_count_title">Vote Count</string>
    <string name="prev_vote_count_key">vote_count.gte</string>
    <string name="pref_vote_count_default_value">2500</string>
    <!--Strings for different method of retrieving url, based on vote count-->
    <!--<string name="pref_sort_by_popularity_desc" translatable="false">popularity.desc</string>-->
    <!--<string name="pref_sort_by_rating_desc" translatable="false">vote_average.desc</string>-->

    <!--Awards-->
    <string name="awards_won">Won</string>
    <string name="awards_nominated">Nominated for </string>
    <string name="awards_event_oscars"> Oscars. </string>
    <string name="awards_event_globes"> Golden Globes. </string>
    <string name="awards_event_bafta"> BAFTAs. </string>
    <string name="awards_another">Another </string>
    <string name="awards_another_wins"> wins </string>
    <string name="awards_another_and"> &amp; </string>
    <string name="awards_another_nominations"> nominations.</string>

    <!--DetailActivity-->
    <string name="by">by</string>
    <string name="category_see_all">SEE ALL</string>
    <string name="category_awards">Awards</string>
    <string name="category_synopsis">Synopsis</string>
    <string name="category_cast">Cast</string>
    <string name="category_crew">Crew</string>
    <string name="category_reviews">Reviews</string>
    <string name="category_miscellaneous">Miscellaneous</string>
    <string name="popularity">Popularity: </string>
    <string name="budget">Budget: </string>
    <string name="revenue">Revenue: </string>
    <string name="mins">mins</string>

    <!--ContentDescription-->
    <string name="content_description_logo">Logo</string>
    <string name="content_description_backdrop">Backdrop</string>
    <string name="content_description_poster">Poster</string>
    <string name="content_description_star">Star Rating</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="content_description_cast_poster">Cast Poster</string>
    <string name="content_description_favorite">Favorite</string>
    <string name="content_description_play">Play Video</string>

    <!--Lorem Ipsum-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in libero tincidunt, finibus dolor non, tristique ligula. Cras sit amet scelerisque dui, quis hendrerit quam. Curabitur eu sollicitudin sapien. Donec sagittis nulla lorem. Cras nec nisl in erat fermentum finibus laoreet a sapien. Duis magna purus, semper ac neque at, imperdiet eleifend lectus. Mauris quis tristique justo. Etiam in iaculis magna. Integer ac mi vitae mi viverra congue at in lectus. Suspendisse placerat elementum dui ut accumsan. Phasellus fringilla nisi eget magna gravida, nec tristique turpis mattis.</string>

</resources>
